--- a/detail.html
+++ b/detail.html
@@ -283,6 +283,10 @@
     <script>
       AOS.init();
     </script>
+    <!-- Replace the old script tag for product.js with this -->
+    <script type="module" src="js/api-products.js"></script>
     <script src="js/detail.js"></script>
   </body>
 </html>
+<!-- Add this before the closing body tag -->
+<script src="js/api-products.js"></script>
