--- a/product.html
+++ b/product.html
@@ -176,7 +176,12 @@
           </div>
         </div>
         <div class="row special-list mb-5" id="product-list">
-          <!-- Produk akan dimasukkan secara dinamis melalui JavaScript -->
+          <!-- Products will be loaded dynamically from the API -->
+          <div class="col-12 text-center">
+            <div class="spinner-border text-warning" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -227,12 +232,16 @@
       </div>
     </div>
     <!-- Footer End -->
+    <!-- Replace these script tags at the bottom of your product.html file -->
     <script src="bootstrap-5.0.0-dist/js/bootstrap.bundle.min.js"></script>
     <script src="dist/js/lightbox-plus-jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    <script type="module" src="js/script.js"></script>
+    <!-- Load only one script for product functionality -->
+    <script src="js/script.js"></script>
+    <!-- Replace the script tag for product.js with this -->
+    <script src="js/product-api.js"></script>
   </body>
 </html>
