--- a/index.html
+++ b/index.html
@@ -292,107 +292,8 @@
         <h2 class="text-center mb-5 no-select" data-aos="zoom-in">
           Favourites
         </h2>
-        <div class="row mt-5 justify-content-center">
-          <div class="col-sm-6 col-lg-3 mb-3" data-aos="fade-up">
-            <div class="card under-shadow2">
-              <a
-                href="image/product/pandan-chiffon.jpg"
-                data-lightbox="pandan-chiffon"
-                data-title="Pandan Chiffon"
-              >
-                <img
-                  src="image/product/thumb/pandan-chiffon.jpg"
-                  class="card-img-top"
-                  alt="Pandan Chiffon"
-                />
-              </a>
-              <div class="card-body text-center">
-                <h5 class="card-title text-warning">Pandan Chiffon</h5>
-                <p class="card-text">
-                  A fragrant and soft pandan-flavored chiffon cake.
-                </p>
-                <h4 class="text-warning">Rp 99.999</h4>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-sm-6 col-lg-3 mb-3"
-            data-aos="fade-up"
-            data-aos-duration="600"
-          >
-            <div class="card under-shadow2">
-              <a
-                href="image/product/donut.jpg"
-                data-lightbox="donut-product"
-                data-title="Donut"
-              >
-                <img
-                  src="image/product/thumb/donut.jpg"
-                  class="card-img-top"
-                  alt="Donut"
-                />
-              </a>
-              <div class="card-body text-center">
-                <h5 class="card-title text-warning">Donut</h5>
-                <p class="card-text">
-                  A classic donut with a golden crust and soft inside.
-                </p>
-                <h4 class="text-warning">Rp 99.999</h4>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-sm-6 col-lg-3 mb-3"
-            data-aos="fade-up"
-            data-aos-duration="750"
-          >
-            <div class="card under-shadow2">
-              <a
-                href="image/product/muffins.jpg"
-                data-lightbox="muffin-product"
-                data-title="Chocolate Muffins"
-              >
-                <img
-                  src="image/product/thumb/muffin.jpg"
-                  class="card-img-top"
-                  alt="Chocolate Muffins"
-                />
-              </a>
-              <div class="card-body text-center">
-                <h5 class="card-title text-warning">Muffins</h5>
-                <p class="card-text">
-                  A soft, fluffy, and sweet muffin with a buttery taste.
-                </p>
-                <h4 class="text-warning">Rp 99.999</h4>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-sm-6 col-lg-3 mb-3"
-            data-aos="fade-up"
-            data-aos-duration="800"
-          >
-            <div class="card under-shadow2">
-              <a
-                href="image/product/gingerbread.jpg"
-                data-lightbox="gingerbread-product"
-                data-title="Ginger Bread Cookies"
-              >
-                <img
-                  src="image/product/thumb/gingerbread.jpg"
-                  class="card-img-top"
-                  alt="Ginger Bread Cookies"
-                />
-              </a>
-              <div class="card-body text-center">
-                <h5 class="card-title text-warning">Ginger Bread</h5>
-                <p class="card-text">
-                  A spiced gingerbread cookie, perfect for the holiday season.
-                </p>
-                <h4 class="text-warning">Rp 99.999</h4>
-              </div>
-            </div>
-          </div>
+        <div class="row mt-5 justify-content-center" id="favorites-container">
+          <!-- Favorites items will be dynamically inserted here -->
         </div>
       </div>
       <div class="mt-5 d-flex justify-content-center">
@@ -676,6 +577,123 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+
+      // Dynamic favorites section using API data
+      document.addEventListener("DOMContentLoaded", function () {
+        const favoritesContainer = document.getElementById(
+          "favorites-container"
+        );
+
+        // Helper function to add ngrok-skip-browser-warning header to all requests
+        async function fetchWithHeaders(url, options = {}) {
+          if (!options.headers) {
+            options.headers = {};
+          }
+          options.headers["ngrok-skip-browser-warning"] = "1";
+          options.headers["Content-Type"] =
+            options.headers["Content-Type"] || "application/json";
+          options.mode = "cors";
+          return fetch(url, options);
+        }
+
+        // Function to fetch products from API
+        async function fetchProducts() {
+          try {
+            const response = await fetchWithHeaders(
+              "https://puma-bold-grubworm.ngrok-free.app/tampil"
+            );
+
+            if (!response.ok) {
+              throw new Error(`API responded with status: ${response.status}`);
+            }
+
+            const responseText = await response.text();
+            const data = JSON.parse(responseText);
+
+            if (data.status === 200 && Array.isArray(data.values)) {
+              return data.values;
+            } else {
+              console.error("Invalid API response format:", data);
+              return [];
+            }
+          } catch (error) {
+            console.error("Error fetching products:", error);
+            return [];
+          }
+        }
+
+        // Function to render favorites
+        async function renderFavorites() {
+          // Get all products from API
+          const allProducts = await fetchProducts();
+
+          // Filter for the specific products we want
+          const targetTitles = [
+            "Chocolate Chips Cookies",
+            "White Bread",
+            "Muffins",
+            "Pandan Chiffon",
+          ];
+          const favorites = allProducts.filter((product) =>
+            targetTitles.includes(product.title)
+          );
+
+          // Clear existing content
+          favoritesContainer.innerHTML = "";
+
+          // Add the favorites to the container
+          favorites.forEach((product, index) => {
+            const productElement = document.createElement("div");
+            productElement.className = "col-sm-6 col-lg-3 mb-3";
+            productElement.setAttribute("data-aos", "fade-up");
+
+            if (index > 0) {
+              productElement.setAttribute(
+                "data-aos-duration",
+                (600 + index * 50).toString()
+              );
+            }
+
+            // Create slug from title
+            const slug = product.title.toLowerCase().replace(/\s+/g, "-");
+
+            // Format price to Rupiah
+            const formattedPrice = new Intl.NumberFormat("id-ID", {
+              style: "currency",
+              currency: "IDR",
+              minimumFractionDigits: 0,
+            }).format(product.price);
+
+            productElement.innerHTML = `
+              <div class="card under-shadow2 h-100">
+                <a
+                  href="${product.image}"
+                  data-lightbox="${slug}"
+                  data-title="${product.title}"
+                >
+                  <img
+                    src="${product.image}"
+                    class="card-img-top"
+                    alt="${product.title}"
+                  />
+                </a>
+                <div class="card-body text-center d-flex flex-column">
+                  <h5 class="card-title text-warning">${product.title}</h5>
+                  <p class="card-text flex-grow-1">
+                    ${product.description1}
+                  </p>
+                  <h4 class="text-warning mt-auto">${formattedPrice}</h4>
+                </div>
+              </div>
+            `;
+
+            favoritesContainer.appendChild(productElement);
+          });
+        }
+
+        // Call the function to render favorites
+        renderFavorites();
+      });
     </script>
   </body>
 </html>
