--- a/index.html
+++ b/index.html
@@ -142,66 +142,11 @@
     <div class="container-fluid py-5">
       <div class="container">
         <h2 class="text-center no-select" data-aos="fade-up">Special Offer</h2>
-        <div class="row mt-5 justify-content-center">
-          <div class="col-sm-6 col-lg-3 mb-3" data-aos="fade-up">
-            <div class="card under-shadow2">
-              <img
-                src="image/product/thumb/chocolate-mousse.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Buy One, Get One</h5>
-                <p class="card-text">
-                  Buy one, get one free! Enjoy your favorite pastry with
-                  exclusive Sunday offer. Don’t miss out—treat yourself to
-                  double the sweetness!
-                </p>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-sm-6 col-lg-3 mb-3"
-            data-aos="fade-up"
-            data-aos-duration="650"
-          >
-            <div class="card under-shadow2">
-              <img
-                src="image/product/thumb/fudge.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Free Fudges</h5>
-                <p class="card-text">
-                  Get a free chocolate fudge with every purchase of a pastry
-                  bundle! A perfect sweet addition to your delightful selection
-                  of pastries.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-sm-6 col-lg-3 mb-3"
-            data-aos="fade-up"
-            data-aos-duration="850"
-          >
-            <div class="card under-shadow2">
-              <img
-                src="image/product/thumb/milk-bread.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">20% OFF</h5>
-                <p class="card-text">
-                  Get 20% off on selected types of bread! A great chance to
-                  enjoy our authentic flavors at a special price. Limited-time
-                  offer—grab yours!
-                </p>
-              </div>
-            </div>
-          </div>
+        <div
+          class="row mt-5 justify-content-center"
+          id="special-offers-container"
+        >
+          <!-- Special offers will be dynamically inserted here -->
         </div>
         <div class="mt-5 d-flex justify-content-center">
           <a
@@ -576,14 +521,11 @@
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+      // Initialize AOS library
       AOS.init();
 
-      // Dynamic favorites section using API data
-      document.addEventListener("DOMContentLoaded", function () {
-        const favoritesContainer = document.getElementById(
-          "favorites-container"
-        );
-
+      // Dynamic content sections using API data
+      document.addEventListener("DOMContentLoaded", async function () {
         // Helper function to add ngrok-skip-browser-warning header to all requests
         async function fetchWithHeaders(url, options = {}) {
           if (!options.headers) {
@@ -622,27 +564,64 @@
           }
         }
 
-        // Function to render favorites
-        async function renderFavorites() {
-          // Get all products from API
-          const allProducts = await fetchProducts();
+        // Function to fetch promos from API
+        async function fetchPromos() {
+          try {
+            const response = await fetchWithHeaders(
+              "https://puma-bold-grubworm.ngrok-free.app/promo"
+            );
 
-          // Filter for the specific products we want
-          const targetTitles = [
-            "Chocolate Chips Cookies",
-            "White Bread",
-            "Muffins",
-            "Pandan Chiffon",
-          ];
-          const favorites = allProducts.filter((product) =>
-            targetTitles.includes(product.title)
+            if (!response.ok) {
+              throw new Error(`API responded with status: ${response.status}`);
+            }
+
+            const responseText = await response.text();
+            const data = JSON.parse(responseText);
+
+            if (data.status === 200 && Array.isArray(data.values)) {
+              return data.values;
+            } else {
+              console.error("Invalid API response format:", data);
+              return [];
+            }
+          } catch (error) {
+            console.error("Error fetching promos:", error);
+            return [];
+          }
+        }
+
+        // Function to render favorites section
+        async function renderFavorites() {
+          // Get the container
+          const favoritesContainer = document.getElementById(
+            "favorites-container"
           );
 
-          // Clear existing content
+          // Check if the favorites container exists on the current page
+          if (!favoritesContainer) {
+            console.log("Favorites container not found on this page");
+            return; // Exit if container doesn't exist
+          }
+
+          console.log("Rendering favorites section...");
+
+          // Get products from API
+          const products = await fetchProducts();
+
+          // Ensure we have products before continuing
+          if (!products || products.length === 0) {
+            console.log("No products found to display in favorites");
+            return;
+          }
+
+          // Clear existing content in favorites container ONLY
           favoritesContainer.innerHTML = "";
 
-          // Add the favorites to the container
-          favorites.forEach((product, index) => {
+          // Take only the first 4 products or all if less than 4
+          const favProducts = products.slice(0, 4);
+
+          // Add products to the favorites container
+          favProducts.forEach((product, index) => {
             const productElement = document.createElement("div");
             productElement.className = "col-sm-6 col-lg-3 mb-3";
             productElement.setAttribute("data-aos", "fade-up");
@@ -654,45 +633,161 @@
               );
             }
 
-            // Create slug from title
-            const slug = product.title.toLowerCase().replace(/\s+/g, "-");
-
-            // Format price to Rupiah
-            const formattedPrice = new Intl.NumberFormat("id-ID", {
-              style: "currency",
-              currency: "IDR",
-              minimumFractionDigits: 0,
-            }).format(product.price);
-
             productElement.innerHTML = `
-              <div class="card under-shadow2 h-100">
-                <a
-                  href="${product.image}"
-                  data-lightbox="${slug}"
-                  data-title="${product.title}"
-                >
-                  <img
-                    src="${product.image}"
-                    class="card-img-top"
-                    alt="${product.title}"
-                  />
-                </a>
-                <div class="card-body text-center d-flex flex-column">
-                  <h5 class="card-title text-warning">${product.title}</h5>
-                  <p class="card-text flex-grow-1">
-                    ${product.description1}
-                  </p>
-                  <h4 class="text-warning mt-auto">${formattedPrice}</h4>
-                </div>
-              </div>
-            `;
+        <div class="card under-shadow2">
+          <a href="${product.image}" data-lightbox="product-${
+              product.id
+            }" data-title="${product.name}">
+            <img src="${product.image}" class="card-img-top" alt="${
+              product.name
+            }" />
+          </a>
+          <div class="card-body text-center">
+            <h5 class="card-title">${product.name}</h5>
+            <p class="card-text">${product.description}</p>
+            <p class="text-warning">Rp ${parseInt(product.price).toLocaleString(
+              "id-ID"
+            )}</p>
+          </div>
+        </div>
+      `;
 
             favoritesContainer.appendChild(productElement);
           });
+
+          console.log(
+            `Added ${favProducts.length} products to favorites section`
+          );
         }
 
-        // Call the function to render favorites
-        renderFavorites();
+        // Function to render special offers
+        async function renderSpecialOffers() {
+          // Get the container
+          const specialOffersContainer = document.getElementById(
+            "special-offers-container"
+          );
+
+          // Check if the special offers container exists on the current page
+          if (!specialOffersContainer) {
+            console.log("Special offers container not found on this page");
+            return; // Exit if container doesn't exist
+          }
+
+          console.log("Rendering special offers section...");
+
+          // Get all promos from API
+          const allPromos = await fetchPromos();
+
+          console.log("All promos from API (Special Offers):", allPromos);
+
+          // Filter for specific promo titles
+          const targetTitles = [
+            "Bundle & Save – Free Gingerbread with Every 5 Purchased!",
+            "Buy One, Get a Muffin Free – Sweeten Your Day!",
+            "Vanilla Chiffon Bliss – Light, Elegant, and 10% Off!",
+          ];
+
+          const specialOffers = allPromos.filter((promo) =>
+            targetTitles.includes(promo.title)
+          );
+
+          console.log("Filtered special offers:", specialOffers);
+
+          // Clear existing content in special offers container ONLY
+          specialOffersContainer.innerHTML = "";
+
+          // Check if we have any special offers to display
+          if (specialOffers.length === 0) {
+            console.log("No matching special offers found");
+            return; // Exit the function if no offers match
+          }
+
+          // Add the special offers to the container
+          specialOffers.forEach((promo, index) => {
+            const promoElement = document.createElement("div");
+            promoElement.className = "col-sm-6 col-lg-3 mb-3";
+            promoElement.setAttribute("data-aos", "fade-up");
+
+            if (index > 0) {
+              promoElement.setAttribute(
+                "data-aos-duration",
+                (600 + index * 50).toString()
+              );
+            }
+
+            // Create slug from title
+            const slug = promo.title.toLowerCase().replace(/\s+/g, "-");
+
+            // Format dates for display
+            const formatDate = (dateString) => {
+              const date = new Date(dateString);
+              return date.toLocaleDateString("en-US", {
+                year: "numeric",
+                month: "short",
+                day: "numeric",
+              });
+            };
+
+            const startDate = formatDate(promo.time_start);
+            const endDate = formatDate(promo.time_end);
+
+            promoElement.innerHTML = `
+        <div class="card under-shadow2">
+          <a
+            href="${promo.image}"
+            data-lightbox="${slug}"
+            data-title="${promo.title}"
+          >
+            <img
+              src="${promo.image}"
+              class="card-img-top"
+              alt="${promo.title}"
+            />
+          </a>
+          <div class="card-body text-center">
+            <h5 class="card-title text-warning">${promo.title
+              .split("–")[0]
+              .trim()}</h5>
+            <p class="card-text">
+              ${promo.description}
+            </p>
+            <p class="text-warning">
+              <small>Valid: ${startDate} - ${endDate}</small>
+            </p>
+          </div>
+        </div>
+      `;
+
+            specialOffersContainer.appendChild(promoElement);
+          });
+
+          console.log(
+            `Added ${specialOffers.length} promos to special offers section`
+          );
+        }
+
+        // IMPORTANT: Execute the functions sequentially, with proper error handling
+        try {
+          // First check if each container exists
+          const specialOffersContainer = document.getElementById(
+            "special-offers-container"
+          );
+          const favoritesContainer = document.getElementById(
+            "favorites-container"
+          );
+
+          // Execute special offers first if container exists
+          if (specialOffersContainer) {
+            await renderSpecialOffers();
+          }
+
+          // Then execute favorites if container exists
+          if (favoritesContainer) {
+            await renderFavorites();
+          }
+        } catch (error) {
+          console.error("Error rendering content:", error);
+        }
       });
     </script>
   </body>
